# Shannon

./: LICENSE  README.md
agent/: Cargo.toml  Dockerfile
agent/src/: main.rs
charts/logless-agent/: Chart.yaml
charts/logless-agent/templates/: _helpers.tpl  daemonset.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
ui/: .env.example  index.html  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: ErrorTimeSeriesChart.tsx  LogTable.tsx  QueryBar.tsx  TimeRangePicker.tsx
ui/src/duckdb/: client.ts
ui/src/types/: log.ts
