[package]
name = "shannon-agent"
version = "0.4.0"
edition = "2021"
description = "Zero-ETL Edge Telemetry Agent for Kubernetes"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = "50"
parquet = "50"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
aws-config = "1"
aws-sdk-s3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
linemux = "0.3"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
